# procmon

./: .gitignore  Makefile  README.md  config.py  logger.py  mail.py  process.py  procmon  pyproject.toml  sample-procmon.cfg
.github/workflows/: python-package.yml
examples/: procmon.cfg
images/: procmon.xcf
src/: config.py  logger.py  mail.py  process.py
tests/: logger_test.py  process_test.py
